# caja-repairer

./: README.md
repairer/: Makefile.am  autogen.sh  cleanup.sh  configure.ac
repairer/src/: Makefile.am  caja-filename-repairer-i18n.h  caja-filename-repairer.c  caja-filename-repairer.h  encoding-dialog.c  encoding-dialog.h  filename-repairer.c  repair-dialog.c  repair-dialog.h  repair-dialog.ui  repairer.c
